# audio-player-gst

./: README.md  pubspec.yaml
example/: .gitignore  README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
lib/: audio_player_gst.dart  audio_player_gst_method_channel.dart  audio_player_gst_platform_interface.dart  events.dart
linux/: CMakeLists.txt  app-src.cpp  app-src.h  audio_player.cpp  audio_player.h  audio_player_exception.h  audio_player_gst_plugin.cc  audio_player_gst_plugin_private.h  flutter_event_sender.cpp  flutter_event_sender.h  y-dec.cpp  y-dec.h  y-downloader.cpp  y-downloader.h
linux/include/audio_player_gst/: audio_player_gst_plugin.h
linux/test/: audio_player_gst_plugin_test.cc
test/: audio_player_gst_method_channel_test.dart  audio_player_gst_test.dart
